<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/taskInfo"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/darker_gray" >
        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_main_tv_title"/>
        <LinearLayout
            android:id="@+id/task_container"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
    <LinearLayout
        android:id="@+id/btnContainer"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_standard"
            android:layout_width="0dip"
            android:layout_weight="0.25"
            android:layout_height="match_parent"
            android:text="@string/activity_main_btn_standard"/>
        <Button
            android:id="@+id/btn_singleTop"
            android:layout_width="0dip"
            android:layout_weight="0.25"
            android:layout_height="match_parent"
            android:text="@string/activity_main_btn_singletop"/>
        <Button
            android:id="@+id/btn_singleTask"
            android:layout_width="0dip"
            android:layout_weight="0.25"
            android:layout_height="match_parent"
            android:text="@string/activity_main_btn_singletask"/>
        <Button
            android:id="@+id/btn_singleInstance"
            android:layout_width="0dip"
            android:layout_weight="0.25"
            android:layout_height="match_parent"
            android:text="@string/activity_main_btn_singleinstance"/>
    </LinearLayout>
</LinearLayout>
